# mini-graph-rag

./: README.md  config.py  entity_extractor.py  entity_resolver.py  example.py  ingest_pipeline.py  knowledge_graph.py  main.py  pyproject.toml  retriever.py
src/api/: __init__.py  main.py
src/config/: __init__.py  config.py
src/entity/: __init__.py  entity_extractor.py  entity_resolver.py
src/graph/: __init__.py  knowledge_graph.py
src/ingest/: __init__.py
src/retrieval/: __init__.py  retriever.py  synthesizer.py  text_indexer.py
src/schema/: __init__.py  api.py  entity.py  graph.py  retrieval.py
tests/: __init__.py
